<resources>
    <string name="app_name">Formulários</string>
    <string name="action_settings">Configurações</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_forms_fragment_label">Formulários</string>
    <string name="form_fragment_edit_label"> Editar Formulário</string>

    <string name="form_input_name_label">Nome</string>
    <string name="form_input_age_label">Idade</string>
    <string name="form_cep_phone_label">Telefone</string>
    <string name="form_cep_input_label">CEP</string>
    <string name="form_button_save_label">Salvar</string>
    <string name="form_input_address_label">Logradouro</string>
    <string name="form_input_district_label">Bairro</string>
    <string name="form_input_city_label">Cidade</string>
    <string name="form_input_federal_unit_label">UF</string>
    <string name="form_input_address_number">Número</string>
    <string name="form_input_complement_label">Complemento</string>
    <string name="search_zip_code_error_label">Erro ao buscar CEP</string>

    <string name="create_action_operation">Criar</string>
    <string name="edit_action_operation">Editar</string>
    <string name="form_item_default_name">Nome</string>
    <string name="form_item_default_phone">Telefone</string>
</resources>